added form to homepage

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <nav class="site-navigation position-relative text-right" role="navigation">
                         <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                             <li><a href="#press" class="nav-link">Press</a></li>
-                            <li><a href="mailto:hello@rankthevoteva.org" class="nav-link">Contact Us</a></li>
+                            <li><a href="mailto:hello@rankedchoiceva.org" class="nav-link">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -255,14 +255,28 @@
             <div class="row align-items-center">
                 <div class="col-12 intake-text-image">
                     <div class="row">
-                        <div class="col-lg-6 text-center text-lg-left">
+                        <div class="col-lg-5 text-center text-lg-left">
                             <h1 style="color: white;">Sign up to join <font style="color: #800080">Ranked Choice
                                     Virginia</font>
                             </h1>
                             <p class="mb-5" style="color: white;">We're building a movement for
                                 ranked choice voting in Virginia. Add your name and we'll contact
                                 you about opportunities and news from our growing organization.</p>
-                            <p><a href="#" class="btn btn-outline">Join Us</a></p>
+                            <!--
+                                <p><a href="#" class="btn btn-outline">Join Us</a></p>-->
+                        </div>
+                        <div class="col-lg-6 offset-lg-1">
+                            <link rel='preload' href='https://d3rse9xjbp8270.cloudfront.net/at.js' as='script'
+                                crossorigin='anonymous'>
+                            <link rel='preload' href='https://d3rse9xjbp8270.cloudfront.net/at.min.css' as='style'>
+                            <script type='text/javascript' src='https://d3rse9xjbp8270.cloudfront.net/at.js'
+                                crossorigin='anonymous'></script>
+                            <div class="ngp-form"
+                                data-form-url="https://actions.ngpvan.com/v1/Forms/UjwRRZCo-kKXUgEk7xdHkg2"
+                                data-fastaction-endpoint="https://fastaction.ngpvan.com" data-inline-errors="true"
+                                data-fastaction-nologin="true" data-databag-endpoint="https://profile.ngpvan.com"
+                                data-databag="everybody" data-mobile-autofocus="false">
+                            </div>
                         </div>
                     </div>
                 </div>
