updating main copy

--- a/index.html
+++ b/index.html
@@ -321,10 +321,9 @@
                                 more voices<font style="color: #2B3470">.</font>
                             </h1>
                             <p class="mb-5" style="color: white;"><strong>Ranked-choice voting</strong> is a small
-                                change to ballots that
-                                makes a big difference for democracy, and it’s coming to Virginia. We’re building a
-                                movement to bring ranked-choice voting to elections all across the Commonwealth. Sign up
-                                here to get updates on how you can help.</p>
+                                is a small change to ballots that makes a big difference for democracy, and it’s coming
+                                to Virginia. Sign up here to learn how you can help bring ranked-choice voting to a
+                                ballot box near you. </p>
                             <!--
                                 <p><a href="#" class="btn btn-outline">Join Us</a></p>-->
                         </div>
