pushing some updates

--- a/donate.html
+++ b/donate.html
@@ -301,7 +301,7 @@
                         <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                             <li><a href="/index.html#learn" class="nav-link">Learn</a></li>
                             <li><a href="mailto:hello@rankedchoiceva.org" class="nav-link">Contact</a></li>
-                            <li><a href="/" class="nav-link">Donate</a>
+                            <li><a href="#" class="nav-link">Donate</a>
                             </li>
 
                         </ul>
@@ -316,11 +316,13 @@
                 <div class="col-12 intake-text-image">
                     <div class="row">
                         <div class="col-lg-5 text-center text-lg-left">
-                            <h1 style="color: white;">donate to ranked-choice virginia
+                            <h1 style="color: white;">donate to <font style="color: #2B3470">ranked-choice virginia
+                                </font>
                             </h1>
-                            <p class="mb-5" style="color: white;"><strong style="color: #2B3470">[Thanks to]
-                                </strong>RTV
-                                for helping us get fundraising off the ground</p>
+                            <p class="mb-5" style="color: white;">Rank The Vote has generously offered to help us
+                                process contributions as we get up and running. You can contribute below and learn more
+                                about Rank the Vote <a href="rankthevote.us"
+                                    style="color: #2B3470; text-decoration: underline;">here</a>.</p>
                             <p><a href="rankthevote.us/donate" class="btn btn-outline">Donate</a></p>
                         </div>
                         <div class="col-lg-6 offset-lg-1"></div>
